# ironclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURE_PARITY.md  README.md
.todos/: command_usage.jsonl  config.json  issues.db  issues.db-shm  issues.db-wal
benchmarks/src/: runner.rs
channels-src/discord/: Cargo.toml  README.md  discord.capabilities.json
channels-src/discord/src/: lib.rs
examples/: test_heartbeat.rs
skills/web-ui-test/: SKILL.md
src/: app.rs  bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  settings.rs  testing.rs
src/agent/: agent_loop.rs  commands.rs  compaction.rs  dispatcher.rs  mod.rs  routine.rs  routine_engine.rs  scheduler.rs  self_repair.rs  session.rs  session_manager.rs  submission.rs  task.rs  thread_ops.rs  undo.rs  worker.rs
src/channels/: repl.rs
src/channels/wasm/: wrapper.rs
src/cli/: config.rs  mod.rs  oauth_defaults.rs  status.rs  tool.rs
src/config/: agent.rs  builder.rs  channels.rs  embeddings.rs  heartbeat.rs  helpers.rs  hygiene.rs  routines.rs  safety.rs  sandbox.rs  skills.rs  wasm.rs
src/context/: state.rs
src/db/: mod.rs  postgres.rs
src/db/libsql/: mod.rs  routines.rs
src/history/: store.rs
src/hooks/: hook.rs  mod.rs  registry.rs
src/llm/: failover.rs  mod.rs  nearai.rs  nearai_chat.rs  reasoning.rs  retry.rs  session.rs
src/secrets/: store.rs
src/setup/: channels.rs  wizard.rs
src/tools/: idempotency.rs  mod.rs  registry.rs  tool.rs
src/tools/builtin/: echo.rs  file.rs  job.rs  json.rs  memory.rs  shell.rs  time.rs
src/tools/mcp/: auth.rs  client.rs  config.rs
src/tools/wasm/: credential_injector.rs  error.rs  host.rs  limits.rs  loader.rs  mod.rs  runtime.rs  wrapper.rs
src/worker/: runtime.rs
tests/: html_to_markdown.rs  workspace_integration.rs
tools-src/github/: Cargo.toml  README.md  github-tool.capabilities.json
tools-src/github/src/: lib.rs
tools-src/gmail/src/: lib.rs
tools-src/google-calendar/src/: lib.rs
tools-src/google-docs/src/: lib.rs
tools-src/google-drive/src/: lib.rs
tools-src/google-sheets/src/: lib.rs
tools-src/google-slides/src/: lib.rs
tools-src/okta/src/: lib.rs
tools-src/slack/src/: lib.rs
tools-src/telegram/src/: lib.rs
wit/: tool.wit
